--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <section class="sections">
         <article id="about-me" class="about-me">
             <h3>About Me</h3>
+            <div class="me-picture">
+                <img src="assets/images/Photo on 12-13-21 at 5.47 PM.jpg">
+            </div>
             <div class="section-text">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit corrupti, repellat adipisci nostrum non nisi est eos accusantium magni delectus officia, voluptas earum neque voluptate sed, iusto in totam laborum.</p>
             </div>
@@ -53,7 +56,10 @@
         <article id="contact" class="contact">
             <h3>Contact</h3>
             <div class="contact-info">
-
+                <p>919.623.9891<br/>
+                agpritts@gmail.com<br/>
+                GitHub<br/>
+                LinkedIn</p>
             </div>
         </article>
     </section>
