hot fixes for page orientation

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
     <section class="sections">
         <article id="about-me" class="about-me">
             <h3>About Me</h3>
-            <div class="me-picture">
-                <img src="assets/images/Photo on 12-13-21 at 5.47 PM.jpg">
-            </div>
-            <div class="section-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit corrupti, repellat adipisci nostrum non nisi est eos accusantium magni delectus officia, voluptas earum neque voluptate sed, iusto in totam laborum.</p>
+            <div class="flex-container">
+                <div class="me-picture">
+                    <img src="assets/images/Photo on 12-13-21 at 5.47 PM.jpg">
+                </div>
+                <div class="section-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit corrupti, repellat adipisci nostrum non nisi est eos accusantium magni delectus officia, voluptas earum neque voluptate sed, iusto in totam laborum.</p>
+                </div>
             </div>
         </article>
     </section>
@@ -52,14 +54,14 @@
         </article>
     </section>
 
-    <section class="sections">
+    <section class="sections-contact">
         <article id="contact" class="contact">
             <h3>Contact</h3>
             <div class="contact-info">
-                <p>919.623.9891<br/>
-                agpritts@gmail.com<br/>
-                GitHub<br/>
-                LinkedIn</p>
+                <p>919.623.9891</p>
+                <p>agpritts@gmail.com</p>
+                <p>GitHub</p>
+                <p>LinkedIn</p>
             </div>
         </article>
     </section>
