--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="#resume">Resume</a>
+                    <a href="./resume.html">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -49,7 +49,21 @@
         <article id="work" class="work">
             <h3>Work</h3>
             <div class="work-images">
-
+                <a class="run-picture" href="https://agpritts.github.io/run-buddy/">
+                    <img src="assets/images/Screen Shot 2022-01-16 at 8.40.37 PM.png">
+                </a>
+                <a href="https://agpritts.github.io/robot-gladiators/">
+                    <img src="assets/images/Screen Shot 2022-01-16 at 10.20.53 PM.png">
+                </a>
+                <a href="https://agpritts.github.io/robot-gladiators/">
+                    <img src="assets/images/Screen Shot 2022-01-16 at 10.20.53 PM.png">
+                </a>
+                <a href="https://agpritts.github.io/robot-gladiators/">
+                    <img src="assets/images/Screen Shot 2022-01-16 at 10.20.53 PM.png">
+                </a>
+                <a href="https://agpritts.github.io/robot-gladiators/">
+                    <img src="assets/images/Screen Shot 2022-01-16 at 10.20.53 PM.png">
+                </a>
             </div>
         </article>
     </section>
@@ -58,10 +72,10 @@
         <article id="contact" class="contact">
             <h3>Contact</h3>
             <div class="contact-info">
-                <p>919.623.9891</p>
-                <p>agpritts@gmail.com</p>
-                <p>GitHub</p>
-                <p>LinkedIn</p>
+                <a href="tel:919.623.9891">919.623.9891</a>
+                <a href="mailto://agpritts@gmail.com">agpritts@gmail.com</a>
+                <a href="https://github.com/agpritts">GitHub</a>
+                <a href="https://www.linkedin.com/in/adam-p-aa6761a9/">LinkedIn</a>
             </div>
         </article>
     </section>
