--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <article id="work" class="work">
             <h3>Work</h3>
             <div class="work-images">
+                <a href="https://agpritts.github.io/project1-weather-event/">
+                    <img src="assets/images/Screen Shot 2022-02-22 at 7.05.10 PM.png">
+                </a>
                 <a class="run-picture" href="https://agpritts.github.io/run-buddy/">
                     <img src="assets/images/Screen Shot 2022-01-16 at 8.40.37 PM.png">
-                </a>
-                <a href="https://agpritts.github.io/robot-gladiators/">
-                    <img src="assets/images/Screen Shot 2022-01-16 at 10.20.53 PM.png">
                 </a>
                 <a href="https://agpritts.github.io/robot-gladiators/">
                     <img src="assets/images/Screen Shot 2022-01-16 at 10.20.53 PM.png">
