--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <article id="work" class="work">
             <h3>Work</h3>
             <div class="work-images">
+                <a href="https://gentle-lake-59989.herokuapp.com/">
+                    <img src="assets/images/Screen Shot 2022-04-22 at 4.21.48 PM.png">
+                </a>
                 <a href="https://agpritts.github.io/project1-weather-event/">
                     <img src="assets/images/Screen Shot 2022-02-22 at 7.05.10 PM.png">
                 </a>
